--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.formatting.provider": "autopep8",
-    "python.pythonPath": "/usr/bin/python3.6"
+    "python.pythonPath": "/home/lovsld/venv_web/bin/python3"
 }
