--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ toml==0.10.1
 typed-ast==1.4.1
 wrapt==1.12.1
 zipp==3.1.0
-Pillow==7.2.0
+#Pillow==7.2.0
 PyJWT~=1.7.1
 djangorestframework~=3.11.0
 django-haystack~=2.8.1
